# EvalynPy

./: README.md  database.json  evalyn.py  index.py  pyproject.toml
features/: addprem.py  ai.py  delprem.py  owner.py  totaluser.py
